[package]
name = "sprout-therapy-test-task"
version = "0.1.0"
authors = ["Nikita Khateev <nikita.khateev@dsr-corporation.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
custom1 = []
custom2 = []

[dependencies]
