[package]
name = "sprout-therapy-test-task"
version = "0.1.0"
authors = ["Nikita Khateev <nikita.khateev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
custom1 = []
custom2 = []

[dependencies]
rocket = "0.4.5"
rocket_contrib = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
matches = "0.1.8"
